Fix JavaDoc, SAT and depreacation warnings (#4598)
* Fix SAT and depreacation warnings
* Fix JavaDoc build

Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>